--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.ScheduleRutMiit" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">#4f74e0</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/logo_mono</item>
+        <item name="postSplashScreenTheme">@style/Theme.ScheduleRutMiit</item>
+    </style>
 </resources>
