--- a/app/src/main/res/drawable/review_fill.xml
+++ b/app/src/main/res/drawable/review_fill.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="960"
     android:viewportHeight="960">
   <path
-      android:pathData="M200,840q-33,0 -56.5,-23.5T120,760v-250h280v330L200,840ZM480,840v-330h360v250q0,33 -23.5,56.5T760,840L480,840ZM120,430v-230q0,-33 23.5,-56.5T200,120h560q33,0 56.5,23.5T840,200v230L120,430Z"
+      android:pathData="M666,520 L440,294l226,-226 226,226 -226,226ZM120,440v-320h320v320L120,440ZM520,840v-320h320v320L520,840ZM120,840v-320h320v320L120,840Z"
       android:fillColor="#000000"/>
 </vector>
